[package]
name = "ratsio"
version = "0.2.1"
readme = "README.md"
authors = ["Michael Netshipise <michael@zulzi.com>"]
description = "Ratsio is a Rust client library for NATS messaging system and NATS Event Streaming."
#documentation = "https://docs.rs/ratsio"
categories = [
    "network-programming",
    "web-programming",
    "asynchronous",
]
homepage = "https://github.com/mnetship/ratsio"
repository = "https://github.com/mnetship/ratsio"
keywords = ["nats", "streaming", "async", "tokio"]
license = "MIT"
edition = "2018"


[dependencies]
bytes               = "^0.4"
failure             = "^0.1"
failure_derive      = "^0.1"
futures             = "^0.1"
rand                = "^0.6"
serde               = {version="^1.0"}
serde_derive        = {version="^1.0"}
serde_json          = {version="^1.0"}
protobuf            = { version = "^2.0"}
chrono              = "^0.4"
env_logger          = "^0.6"
log                 = "^0.4"
nom                 = {version = "^4.1", features = ["regexp", "verbose-errors"]}
tokio               = {version="^0.1"}
tokio-tcp           = "^0.1"
native-tls          = "^0.2"
tokio-tls           = "^0.2"
parking_lot         = "^0.7"
derive_builder      = "^0.7"
url                 = "^1.7"
regex               = "^1"
sha2                = "^0.8"
atomic-counter      = "^1.0"
lazy_static         = "^1.2"