[package]
name = "ratsio"
version = "0.3.0-alpha.1"
readme = "README.md"
authors = ["Michael Netshipise <michael@zulzi.com>"]
description = "Ratsio is a Rust client library for NATS messaging system and NATS Event Streaming."
documentation = "https://docs.rs/ratsio"
categories = [
    "network-programming",
    "web-programming",
    "asynchronous",
]
homepage = "https://github.com/mnetship/ratsio"
repository = "https://github.com/mnetship/ratsio"
keywords = ["nats", "streaming", "async", "tokio"]
license = "MIT"
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes               = "^0.4"
prost               = "^0.6"
log                 = "^0.4"
cfg-if              = "^0.1"
failure             = "^0.1"
failure_derive      = "^0.1"
futures             = {version="^0.3"}
futures-core        = "^0.3"
futures-timer       = "^2.0"
pin-project         = "^0.4"

tokio               = { version = "^0.2", features = ["io-util", "macros", "stream", "sync", "rt-core", "rt-threaded", "time", "tcp"] }
tokio-util          = { version = "^0.2", features = ["codec"] }
native-tls          = { version = "^0.2", optional = true }
tokio-tls           = { version = "^0.3", optional = true }

nom                 = {version = "^4.1", features = ["regexp", "verbose-errors"]}
rand                = "^0.6"
regex               = "^1.3"
lazy_static         = "^1.2"
derive_builder      = "^0.7"

atomic-counter      = "^1.0"
nkeys               = "^0.0.9"
sha2                = "^0.8"

data-encoding       = "^2.1.2"
env_logger = {version="^0.7"}


[build-dependencies]
prost-build = "0.6"

[features]
default = ["tls"]
tls = ["native-tls", "tokio-tls"]