[package]
name = "ratsio"
version = "0.3.0-alpha.6"
readme = "README.md"
authors = ["Michael Netshipise <michael@zulzi.com>"]
description = "Ratsio is a Rust client library for NATS messaging system and NATS Event Streaming."
documentation = "https://docs.rs/ratsio"
categories = [
    "network-programming",
    "web-programming",
    "asynchronous",
]
homepage = "https://github.com/mnetship/ratsio"
repository = "https://github.com/mnetship/ratsio"
keywords = ["nats", "streaming", "async", "tokio"]
license = "MIT"
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes               = "^1"
prost               = "^0.7"
log                 = "^0.4"
cfg-if              = "^0.1"
thiserror           = "1"
futures             = {version="^0.3"}
futures-core        = "^0.3"
futures-timer       = "^2.0"
pin-project         = "1"

tokio               = { version = "^1", features = ["rt-multi-thread", "net", "time", "io-util", "macros", "sync"] }
tokio-util          = { version = "^0.6", features = ["codec"] }
native-tls          = { version = "^0.2", optional = true }
tokio-native-tls    = { version = "^0.3", optional = true }

nom                 = { version = "^4.1", features = ["regexp", "verbose-errors"] }
rand                = "^0.6"
regex               = "^1.3"
lazy_static         = "^1.2"
derive_builder      = "^0.7"

atomic-counter      = "^1.0"
nkeys               = { version="^0.1", optional=true }
sha2                = "^0.9"

data-encoding       = "^2.1.2"
env_logger = {version="^0.7"}


[build-dependencies]
prost-build = "0.7"

[dev-dependencies]
ctrlc = "3.1"

[features]
default = ["tls"]
tls = ["native-tls", "tokio-native-tls"]
